// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ExpandingPanelClassic > renders correct HTML structure with all props set 1`] = `
"<div class="expanding-panel-classic extra-class">
  <details class="expanding-panel-classic-details" name="snap-all" open="">
    <summary id="id-snap-all-trigger" class="expanding-panel-classic-summary" aria-controls="id-snap-all-content" aria-expanded="true">
      <div class="label-wrapper"></div>
      <div class="icon-wrapper icon-wrapper--hidden"><span class="iconify i-bi:caret-down-fill icon" aria-hidden="true"></span></div>
    </summary>
  </details>
  <div id="id-snap-all-content" class="expanding-panel-classic-content" aria-labelledby="id-snap-all-trigger" role="region">
    <div class="inner"></div>
  </div>
</div>"
`;

exports[`ExpandingPanelClassic > renders correct HTML structure with contentIsOnTop true 1`] = `
"<div class="expanding-panel-classic content-is-on-top">
  <details class="expanding-panel-classic-details" name="snap-content-on-top">
    <summary id="id-snap-content-on-top-trigger" class="expanding-panel-classic-summary" aria-controls="id-snap-content-on-top-content" aria-expanded="false">
      <div class="label-wrapper"></div>
      <div class="icon-wrapper"><span class="iconify i-bi:caret-down-fill icon" aria-hidden="true"></span></div>
    </summary>
  </details>
  <div id="id-snap-content-on-top-content" class="expanding-panel-classic-content" aria-labelledby="id-snap-content-on-top-trigger" role="region">
    <div class="inner"></div>
  </div>
</div>"
`;

exports[`ExpandingPanelClassic > renders correct HTML structure with default props 1`] = `
"<div class="expanding-panel-classic">
  <details class="expanding-panel-classic-details" name="snap-default">
    <summary id="id-snap-default-trigger" class="expanding-panel-classic-summary" aria-controls="id-snap-default-content" aria-expanded="false">
      <div class="label-wrapper"></div>
      <div class="icon-wrapper"><span class="iconify i-bi:caret-down-fill icon" aria-hidden="true"></span></div>
    </summary>
  </details>
  <div id="id-snap-default-content" class="expanding-panel-classic-content" aria-labelledby="id-snap-default-trigger" role="region">
    <div class="inner"></div>
  </div>
</div>"
`;

exports[`ExpandingPanelClassic > renders correct HTML structure with populated slots 1`] = `
"<div class="expanding-panel-classic">
  <details class="expanding-panel-classic-details" name="snap-slots">
    <summary id="id-snap-slots-trigger" class="expanding-panel-classic-summary" aria-controls="id-snap-slots-content" aria-expanded="false">
      <div class="label-wrapper"><span>Summary text</span></div>
      <div class="icon-wrapper"><span>▸</span></div>
    </summary>
  </details>
  <div id="id-snap-slots-content" class="expanding-panel-classic-content" aria-labelledby="id-snap-slots-trigger" role="region">
    <div class="inner">
      <p>Content text</p>
    </div>
  </div>
</div>"
`;
